--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        dataBinding = true
+        viewBinding = true
+    }
 }
 
 dependencies {
@@ -43,17 +47,17 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'com.google.android.material:material:1.10.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
-    implementation 'com.github.bumptech.glide:glide:4.13.2'
-    kapt 'com.github.bumptech.glide:compiler:4.11.0'
-    implementation 'com.github.bumptech.glide:okhttp3-integration:4.9.0'
-    implementation 'jp.wasabeef:glide-transformations:4.1.0'
-    implementation 'org.greenrobot:eventbus:3.1.1'
+//    implementation 'com.google.android.material:material:1.10.0'
+//    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+//    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+//    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
+//    implementation 'com.github.bumptech.glide:glide:4.13.2'
+//    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+//    implementation 'com.github.bumptech.glide:okhttp3-integration:4.9.0'
+//    implementation 'jp.wasabeef:glide-transformations:4.1.0'
+    implementation("org.greenrobot:eventbus:3.3.1")
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
-    implementation 'com.permissionx.guolindev:permissionx:1.2.2'
+    implementation 'com.guolindev.permissionx:permissionx:1.7.1'
 
     //Android Jetpack 组件
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -69,19 +73,21 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.5.1"
 
     //特定功能依赖库
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
-    implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
-    implementation 'com.scwang.smart:refresh-header-material:2.0.0'
-    implementation 'com.scwang.smart:refresh-layout-kernel:2.0.0'
-    implementation 'com.github.zhpanvip:BannerViewPager:3.1.2'
-    implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
-    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
+//    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
+//    implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
+//    implementation 'com.scwang.smart:refresh-header-material:2.0.0'
+//    implementation 'com.scwang.smart:refresh-layout-kernel:2.0.0'
+//    implementation 'com.github.zhpanvip:BannerViewPager:3.1.5'
+    implementation 'com.geyifeng.immersionbar:immersionbar:3.2.2'
+    implementation 'com.geyifeng.immersionbar:immersionbar-ktx:3.2.2'
+//    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+//    implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.shuyu:GSYVideoPlayer:8.1.2'
-    implementation 'com.tencent.sonic:sdk:3.1.0'
+//    implementation 'com.shuyu:GSYVideoPlayer:8.1.2'
+//    implementation 'com.tencent.sonic:sdk:3.1.0'
     implementation 'com.umeng.umsdk:common:9.3.8'
     implementation 'com.umeng.umsdk:asms:1.2.2'
+    implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.9.9'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
